# devops-hands-on-project-hivebox

./: Dockerfile  Jenkinsfile  _version.py  main.py  pyproject.toml
app/: _version.py  config_logger.py  hivebox_api.py  main.py  test_main.py
