[project]
name = "devops-hands-on-project-hivebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]
